created final TF notebook, saved model file

--- a/notebooks/ivan/7.7_TensorFlow_training_of_the_best_model.ipynb
+++ b/notebooks/ivan/7.7_TensorFlow_training_of_the_best_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e194aa41",
+   "id": "0fedbdfa",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "23013629",
+   "id": "a769a195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3c914ba",
+   "id": "990b212f",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f0193ece",
+   "id": "adb4fd2c",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "33de387c",
+   "id": "66a54012",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e3283c2f",
+   "id": "a11b6a5f",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a843d5eb",
+   "id": "5f5b4e16",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e59992e3",
+   "id": "ff3aefef",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aaeb1417",
+   "id": "7c755b76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "db9c9d8b",
+   "id": "95f4efc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "99cca4e0",
+   "id": "077aa8fa",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2c3437f2",
+   "id": "357311bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed3ae7d",
+   "id": "625a5274",
    "metadata": {},
    "source": [
     "## Final Model"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "077b4ddd",
+   "id": "9d8469df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "adaa51ce",
+   "id": "8f401a34",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23a04ecb",
+   "id": "61a8ef3e",
    "metadata": {},
    "source": [
     "# 2000 epochs - stopped by Early Stopping"
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "65657d4d",
+   "id": "0f411750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "eee92004",
+   "id": "b9a9e600",
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1acbb53e",
+   "id": "b796caca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3fbb7d",
+   "id": "76952300",
    "metadata": {},
    "source": [
     "# 16.4 - continuing without early stopping"
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d379e973",
+   "id": "1e3aa3c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "48662357",
+   "id": "3115e8b7",
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "269ed7b5",
+   "id": "2c5a7fb4",
    "metadata": {},
    "outputs": [
     {
@@ -5881,7 +5881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8786c6a6",
+   "id": "d78af1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5890,7 +5890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a334c03e",
+   "id": "e93aab23",
    "metadata": {},
    "source": [
     "# Another 300 epochs to see if it could get above 68%"
@@ -5899,7 +5899,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "336f4a19",
+   "id": "26d8b18a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5939,7 +5939,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "39f9d249",
+   "id": "0a31b4ca",
    "metadata": {},
    "outputs": [
     {
@@ -7294,7 +7294,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "36280f15",
+   "id": "13a4a419",
    "metadata": {},
    "outputs": [
     {
@@ -7317,7 +7317,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "68704bd3",
+   "id": "fafe6958",
    "metadata": {},
    "outputs": [
     {
@@ -7349,11 +7349,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "a629510f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) for plot_model/model_to_dot to work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_file = '../../../project_data/model_architecture.png'\n",
+    "\n",
+    "tf.keras.utils.plot_model(mdl16_5, to_file=img_file, show_shapes=True, show_layer_names=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c8502fbe",
+   "id": "87a6adc9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# tf.keras.utils.plot_model(model, to_file=dot_img_file, show_shapes=True)\n"
+   ]
   }
  ],
  "metadata": {
