Add k-fold cross validation graph and learning curve graph for KNN.

--- a/notebooks/2.0_demension_reduction.ipynb
+++ b/notebooks/2.0_demension_reduction.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0c9a1927",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4  train        3  248 187 149 130 97 140 139 117 197 251 231 255..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "020cbe3e",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "78652791",
    "metadata": {},
    "outputs": [],
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "32ac5d0c",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "e72ebc71",
    "metadata": {},
    "outputs": [],
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "500f0c4d",
    "metadata": {
     "scrolled": true
@@ -1258,7 +1258,7 @@
        "       5.75950331e-07, 5.68958738e-07, 5.54932350e-07])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "id": "3eeb4daf",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "id": "5976330b",
    "metadata": {
     "scrolled": true
@@ -1319,6 +1319,24 @@
     "cumsum = np.cumsum(pca.explained_variance_ratio_[0:500])\n",
     "print(cumsum[111])\n",
     "print(cumsum[112])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d0c5e330",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8001615550209343\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cumsum[34])"
    ]
   },
   {
