Update K-fold cross validation

--- a/notebooks/4.0_SVM.ipynb
+++ b/notebooks/4.0_SVM.ipynb
@@ -3655,10 +3655,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "04fcca09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV accuracy scores: [0.44592875 0.47423664 0.45625199 0.45466115 0.45402482 0.46516067\n",
+      " 0.46134267 0.45561565 0.45688832 0.44957047]\n",
+      "CV accuracy: 0.457 +/- 0.008\n"
+     ]
+    }
+   ],
    "source": [
     "svm = SVC(C=10.0, random_state=1, kernel='rbf', gamma='auto', decision_function_shape='ovo')\n",
     "scores = cross_val_score(estimator=svm,\n",
