Update KNN result. Add Voting classification

--- a/notebooks/5.0_KNN.ipynb
+++ b/notebooks/5.0_KNN.ipynb
@@ -2863,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "94b0e9d5",
    "metadata": {},
    "outputs": [
@@ -2937,7 +2937,7 @@
        "4  train        3  248 187 149 130 97 140 139 117 197 251 231 255..."
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2950,7 +2950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "c65bfd79",
    "metadata": {},
    "outputs": [],
@@ -2965,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "d668ec36",
    "metadata": {},
    "outputs": [],
@@ -2978,7 +2978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "393ec85e",
    "metadata": {},
    "outputs": [
@@ -2988,7 +2988,7 @@
        "0.2295113260371596"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3002,7 +3002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "736cd3c0",
    "metadata": {},
    "outputs": [
@@ -3012,7 +3012,7 @@
        "0.2246707193515704"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3717,7 +3717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "id": "f6c991bf",
    "metadata": {},
    "outputs": [
@@ -3791,7 +3791,7 @@
        "4  train        3  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ..."
       ]
      },
-     "execution_count": 92,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3803,7 +3803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "id": "2081bf84",
    "metadata": {},
    "outputs": [],
@@ -3818,7 +3818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "id": "a41895b5",
    "metadata": {},
    "outputs": [],
@@ -3831,7 +3831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "id": "8bea577d",
    "metadata": {},
    "outputs": [
@@ -3841,7 +3841,7 @@
        "0.2295113260371596"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3854,7 +3854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "id": "e1b0cdb4",
    "metadata": {},
    "outputs": [
@@ -3864,13 +3864,84 @@
        "0.2246707193515704"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dummy.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53ae9a43",
+   "metadata": {},
+   "source": [
+    "### Performance and Classification report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f2d755a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = dummy.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b0792699",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.032\n",
+      "Recall: 0.143\n",
+      "F1: 0.052\n",
+      "Accuracy: 0.225\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       angry       0.00      0.00      0.00       957\n",
+      "     disgust       0.00      0.00      0.00       830\n",
+      "        fear       0.00      0.00      0.00      1024\n",
+      "       happy       0.22      1.00      0.37      1774\n",
+      "         sad       0.00      0.00      0.00      1247\n",
+      "    surprise       0.00      0.00      0.00       831\n",
+      "     neutral       0.00      0.00      0.00      1233\n",
+      "\n",
+      "    accuracy                           0.22      7896\n",
+      "   macro avg       0.03      0.14      0.05      7896\n",
+      "weighted avg       0.05      0.22      0.08      7896\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chikakoolsen/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/chikakoolsen/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/chikakoolsen/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/chikakoolsen/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Precision: %.3f' % precision_score(y_true=y_test, y_pred=y_pred, average='macro'))\n",
+    "print('Recall: %.3f' % recall_score(y_true=y_test, y_pred=y_pred, average='macro'))\n",
+    "print('F1: %.3f' % f1_score(y_true=y_test, y_pred=y_pred, average='macro'))\n",
+    "print('Accuracy: %.3f' % accuracy_score(y_true=y_test, y_pred=y_pred))\n",
+    "print(classification_report(y_true=y_test, y_pred=y_pred, target_names=target_labels))"
    ]
   },
   {
